# mkdocs-sample

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
about/: index.html
custom_template/: styles.scss
docs/: about.md  index.md
docs/test/: a.md  b.md
search/: search_index.json
test/: index.html
test/a/: index.html
test/b/: index.html
